--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@tailwindcss/forms": "^0.5.11",
         "@tailwindcss/typography": "^0.5.19",
         "@vitejs/plugin-vue": "^6.0.3",
+        "@vuepic/vue-datepicker": "^12.1.0",
         "autoprefixer": "^10.4.23",
         "postcss": "^8.5.6",
         "vue": "^3.5.27"
